--- a/templates/main/company_sections.html
+++ b/templates/main/company_sections.html
@@ -1,22 +1,19 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-<nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">{{ company.name }} - Sections</span>
-    <a class="btn btn-outline-secondary" href="{% url 'dashboard' %}">Back to Dashboard</a>
-</nav>
-
-<div class="container mt-4">
+<div class="container mt-5">
+    <h2>Sections in {{ company.name }}</h2>
     <div class="row">
         {% for section in sections %}
-        <div class="col-md-4">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h5 class="card-title">{{ section.name }}</h5>
-                    <a href="{% url 'section_categories' section.id %}" class="btn btn-primary">View Categories</a>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img src="{{ section.logo.url }}" class="card-img-top" alt="{{ section.name }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ section.name }}</h5>
+                        <p class="card-text">{{ section.description }}</p>
+                        <a href="{% url 'section_categories' section.id %}" class="btn btn-primary">View Categories</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div>
