--- a/templates/main/dashboard.html
+++ b/templates/main/dashboard.html
@@ -1,24 +1,37 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-<nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Dashboard</span>
-    <form class="form-inline" action="{% url 'logout' %}" method="POST">
-        {% csrf_token %}
-        <button class="btn btn-outline-danger" type="submit">Logout</button>
-    </form>
-</nav>
+<div class="container mt-5">
+    <header class="d-flex justify-content-between align-items-center p-3 mb-4 bg-primary text-white">
+        <div class="header-logo">
+            <img src="{% static 'img/logo.png' %}" alt="Logo" height="40">
+            <h3 class="ml-3 mb-0 header-title">Knowledge Base</h3>
+        </div>
+        <div class="logout">
+            <a href="{% url 'logout' %}" class="btn btn-light">Logout</a>
+        </div>
+    </header>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
 
-<div class="container mt-4">
     <div class="row">
         {% for company in companies %}
         <div class="col-md-4">
-            <a href="{% url 'company_sections' company.id %}" class="card mb-4 text-decoration-none" style="color: inherit;">
-                <img src="{{ company.logo.url }}" class="card-img-top" alt="{{ company.name }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ company.name }}</h5>
-                    <p class="card-text">{{ company.description }}</p>
-                    <a href="{% url 'company_sections' company.id %}" class="btn btn-primary">View Sections</a>
+            <a href="{% url 'company_sections' company.id %}" class="text-decoration-none">
+                <div class="card mb-4 shadow-sm">
+                    <img src="{{ company.logo.url }}" class="card-img-top" alt="{{ company.name }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ company.name }}</h5>
+                        <p class="card-text">{{ company.description }}</p>
+                    </div>
                 </div>
             </a>
         </div>
