--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'authBase.html' %}
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
