--- a/templates/main/dashboard.html
+++ b/templates/main/dashboard.html
@@ -3,34 +3,19 @@
 
 {% block content %}
 <div class="container mt-5">
-    <header class="d-flex justify-content-between align-items-center p-3 mb-4 bg-primary text-white">
-        <div class="header-logo">
-            <img src="{% static 'img/logo.png' %}" alt="Logo" height="40">
-            <h3 class="ml-3 mb-0 header-title">Knowledge Base</h3>
-        </div>
-        <div class="logout">
-            <a href="{% url 'logout' %}" class="btn btn-light">Logout</a>
-        </div>
-    </header>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-
+    <!--    اللون من صفحة الbase-->
+    <h2 class="gradient-text" >Hi, {{ user.username }}</h2>
+    <hr>
+    <br>
     <div class="row">
         {% for company in companies %}
         <div class="col-md-4">
-            <a href="{% url 'company_sections' company.id %}" class="text-decoration-none">
+            <a href="{% url 'company_sections' company.id %}" class="text-decoration-none " style="color:#212121">
                 <div class="card mb-4 shadow-sm">
                     <img src="{{ company.logo.url }}" class="card-img-top" alt="{{ company.name }}">
                     <div class="card-body">
-                        <h5 class="card-title">{{ company.name }}</h5>
-                        <p class="card-text">{{ company.description }}</p>
+                        <h5 class="card-title">{{ company.name|capfirst }}</h5>
+                        <p class="card-text">{{ company.description|capfirst }}</p>
                     </div>
                 </div>
             </a>
