--- a/templates/main/article_list.html
+++ b/templates/main/article_list.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Articles in {{ category.name }} ({{ section.name }})</h1>
-
-  <div class="article-list">
-    {% for article in articles %}
-      <div class="article-card">
-        <a href="{% url 'subarticle_list' article.id category.id section.id %}">
-          <img src="{{ article.logo.url }}" alt="{{ article.title }} Logo">
-          <h2>{{ article.title }}</h2>
-          <p>Created at: {{ article.created_at|date:"F d, Y" }}</p>
-        </a>
-      </div>
-    {% endfor %}
-  </div>
-
+<div class="container mt-4">
+    <h3 class="text-center mb-4">Articles in > ({{ category.name|capfirst }}) > ({{ section.name|capfirst }})</h3>
+    <div class="row">
+        {% for article in articles %}
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card h-100">
+                <a href="{% url 'subarticle_list' article.id category.id section.id %}" class="stretched-link text-decoration-none">
+                     <!-- <img src="{{ article.logo.url }}" alt="{{ article.title }} Logo" class="card-img-top"> -->
+                    <div class="card-body">
+                        <h5 class="card-title text-center ">{{ article.title }}</h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
