--- a/templates/main/category_list.html
+++ b/templates/main/category_list.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Categories in {{ section.name }}</h1>
-
-  <div class="category-list">
-    {% for category in categories %}
-      <div class="category-card">
-        <a href="{% url 'article_list' category.id section.id %}">
-          <img src="{{ category.logo.url }}" alt="{{ category.name }} Logo">
-          <h2>{{ category.name }}</h2>
-        </a>
-      </div>
-    {% endfor %}
-  </div>
-
+<div class="container mt-4">
+    <h3 class="text-center mb-4">Categories in {{ section.name|capfirst }}</h3>
+    <div class="row">
+        {% for category in categories %}
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card h-100">
+                <a href="{% url 'article_list' category.id section.id %}" class="stretched-link text-decoration-none">
+                    <img src="{{ category.logo.url }}" alt="{{ category.name }} Logo" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title text-center ">{{ category.name|capfirst }}</h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
