--- a/templates/main/company_list.html
+++ b/templates/main/company_list.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h4 class="gradient-text text-center">ıllıllı⭐🌟 {{ greeting|capfirst }}, {{ user.username }} 🌟⭐ıllıllı</h4>
+    <h4 class="gradient-text text-center">ıllıllı⭐🌟&nbsp; &nbsp;&nbsp;{{ greeting|capfirst }}, {{ user.username }}
+        &nbsp;&nbsp;&nbsp;🌟⭐ıllıllı</h4>
     <br>
     {% if wisdom %}
     <div class="ticker-wrap">
@@ -18,12 +19,11 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
                 <a href="{% url 'section_list' company.id %}" class="stretched-link text-decoration-none">
-                    <img src="{{ company.logo.url }}" alt="{{ company.name }} Logo" class="card-img-top">
+                    <img src="{{ company.logo.url }}" alt="{{ company.name }} Logo" class="card-img-top img-fluid"
+                         style="object-fit: cover; height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">{{ company.name|capfirst }}</h5>
                         <p class="card-text">{{ company.description|capfirst }}</p>
-                        <p class="card-text"><small class="text-muted">Founded: {{ company.founded_date|date:"F d, Y"
-                            }}</small></p>
                         {% if company.is_active %}
                         <span class="badge badge-success">Active</span>
                         {% else %}
