--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -24,8 +24,8 @@
                             <div class="alert alert-danger mt-2">{{ form.password1.errors }}</div>
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            <label for="password2">{{ form.password2.label }}</label>
+                        <div class="form-group" >
+                            <label for="password2">Confirm</label>
                             {{ form.password2 }}
                             {% if form.password2.errors %}
                             <div class="alert alert-danger mt-2">{{ form.password2.errors }}</div>
