--- a/templates/base.html
+++ b/templates/base.html
@@ -13,23 +13,15 @@
 
     <style>
         body {
-            /*background: linear-gradient(120deg, rgb(238, 174, 202,0.4), rgb(148, 187, 233,0.4));
-            background-size: 250% 250%;
-            animation: gradient 10s ease infinite; */
-            position: relative;
-            overflow-y: auto; /* تعديل هنا */
-            height: 100vh; /* تعديل هنا */
-            margin: 0; /* تعديل هنا */
+
+            height: 100%;
+            margin: 0;
             padding-top: 90px;
             font-family: 'Bradley Hand', cursive;
-           /* font-family: 'Times New Roman', sans-serif; /* يمكنك تغيير نوع الخط هنا */  */
+           /* font-family: 'Times New Roman', sans-serif; */
+            min-height: 100vh;
+            overflow-x: hidden;
         }
-        @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
 
 
 .card-header {
@@ -93,12 +85,11 @@
 
 
 header {
-
     border-bottom: 1px solid #ADD8E6;
     text-decoration : none ;
-      font-weight: bold;
     position: fixed;
     width: 100%;
+    height : 60px ;
     top: 0;
     z-index: 1000;
 }
@@ -124,9 +115,17 @@ header {
 }
 
 
+.highlight {
+    font-weight: bold;
+    color : red;
+    background : yellow;
+    padding : 3px ;
+    border-radius: 5px;
+}
+
 
 .gradient-text {
-  background: linear-gradient(to right, #007bff, #ff69b4, #ff69b4);
+  background: linear-gradient(45deg, #ff6b6b, #f06595, #5c7cfa, #339af0, #22b8cf);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -138,7 +137,7 @@ header {
 <header class="d-flex justify-content-between align-items-center p-3 mb-4">
     <div class="header-logo d-flex align-items-center">
         <a href="{% url 'company_list' %}">
-           <!--  <img src="{% static 'img/logo.png' %}" alt="Logo" height="40" class="rounded-circle border"> -->
+            <!--  <img src="{% static 'img/logo.png' %}" alt="Logo" height="40" class="rounded-circle border"> -->
         </a>
         <a class="text-decoration-none " href="{% url 'company_list' %}">
             <h2 style="font-weight: bold;" class="gradient-text pb-1">Knowledge Base</h2>
@@ -147,7 +146,7 @@ header {
     <div class="d-flex align-items-center">
         <nav class="d-flex align-items-center">
             <a href="{% url 'company_list' %}" class="text-decoration-none mr-3">Home</a>
-            <a href="#" class="text-decoration-none mr-3 ">History</a>
+            <a href="{% url 'subarticle_history_list' %}" class="text-decoration-none mr-3 ">History</a>
         </nav>
         <form method="GET" action="{% url 'search_results' %}" class="d-flex align-items-center mt-3">
             <input type="text" name="query" placeholder="search here..." class="form-control mr-2">
@@ -167,16 +166,17 @@ header {
     </div>
 </header>
 
-
 <div class="container">
     {% block content %}
     {% endblock %}
 </div>
+
+
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const themeToggle = document.getElementById('theme-toggle');
         const themeIcon = document.getElementById('theme-icon');
-        const currentTheme = localStorage.getItem('theme') || 'light';
+        const currentTheme = localStorage.getItem('theme') || 'dark';
 
         if (currentTheme === 'dark') {
             document.documentElement.setAttribute('data-bs-theme', 'dark');
