--- a/templates/main/category_list.html
+++ b/templates/main/category_list.html
@@ -8,7 +8,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
             <div class="card h-100">
                 <a href="{% url 'article_list' category.id section.id %}" class="stretched-link text-decoration-none">
-                    <img src="{{ category.logo.url }}" alt="{{ category.name }} Logo" class="card-img-top">
+                    <img src="{{ category.logo.url }}" alt="{{ category.name }} Logo" class="card-img-top img-fluid" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h5 class="card-title text-center ">{{ category.name|capfirst }}</h5>
                     </div>
