--- a/templates/main/company_list.html
+++ b/templates/main/company_list.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h4 class="gradient-text text-center">ıllıllı⭐🌟&nbsp; &nbsp;&nbsp;{{ greeting|capfirst }}, {{ user.username }}
-        &nbsp;&nbsp;&nbsp;🌟⭐ıllıllı</h4>
+    <h4 class="gradient-text text-center">ıllıllı⭐🌟&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ greeting|capfirst }}, {{ user.username }}
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🌟⭐ıllıllı</h4>
     <br>
     {% if wisdom %}
     <div class="ticker-wrap">
