--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
             height: 100%;
             margin: 0;
             padding-top: 90px;
-            font-family: 'Bradley Hand', cursive;
+            padding-right: 50px;
+            padding-left: 50px;
+            /* font-family: 'Bradley Hand', cursive; */
            /* font-family: 'Times New Roman', sans-serif; */
             min-height: 100vh;
             overflow-x: hidden;
@@ -90,6 +92,7 @@ header {
     position: fixed;
     width: 100%;
     height : 60px ;
+    left: 0;
     top: 0;
     z-index: 1000;
 }
@@ -115,6 +118,8 @@ header {
 }
 
 
+
+
 .highlight {
     font-weight: bold;
     color : red;
@@ -124,7 +129,36 @@ header {
 }
 
 
+
+
+
+.feedback-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: linear-gradient(45deg, #ff6b6b, #f06595, #5c7cfa, #339af0, #22b8cf);
+    border-radius: 50%;
+    padding: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.feedback-btn img {
+    width: 40px;
+    height: 40px;
+}
+
+.feedback-btn:hover {
+    background: linear-gradient(45deg, #ff6b6b, #f06595, #5c7cfa, #24ed5a, #24ed5a);
+}
+
+
+
+
+
+
+
 .gradient-text {
+padding-bottom : 2px;
   background: linear-gradient(45deg, #ff6b6b, #f06595, #5c7cfa, #339af0, #22b8cf);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -140,7 +174,7 @@ header {
             <!--  <img src="{% static 'img/logo.png' %}" alt="Logo" height="40" class="rounded-circle border"> -->
         </a>
         <a class="text-decoration-none " href="{% url 'company_list' %}">
-            <h2 style="font-weight: bold;" class="gradient-text pb-1">Knowledge Base</h2>
+            <h2 style="font-weight: bold;  font-family: 'Brush Script MT', cursive;" class="gradient-text pb-1">Knowledge Base</h2>
         </a>
     </div>
     <div class="d-flex align-items-center">
@@ -166,10 +200,14 @@ header {
     </div>
 </header>
 
-<div class="container">
+<div >
     {% block content %}
     {% endblock %}
 </div>
+
+<a href="{% url 'feedback' %}" class="feedback-btn">
+    <img src="{% static 'img/telegram.png' %}" alt="Feedback"/>
+</a>
 
 
 <script>
