--- a/templates/main/search_results.html
+++ b/templates/main/search_results.html
@@ -24,5 +24,14 @@
 </ul>
 {% else %}
 <p style="direction: rtl;">لا توجد نتائج مطابقة لبحثك.</p>
+<br>
+<hr>
+<p style="direction: rtl;" ><small >  قد يكون سبب عدم وجود نتائج بحث هو : </small></p>
+<p style="direction: rtl;" ><small > 1- عدم ادخال نص للبحث وترك القيمة فارغة </small></p>
+<p style="direction: rtl;" ><small > 2- ادخال الكلمات مفصولة باكثر من فراغ </small></p>
+<p style="direction: rtl;" ><small > 3- عدم كتابة الحرف بالطريقة الصحيحة مثلا كلمة ( إبلاغ ) يجب ان تُكتب بهمزة اسفل حرف الالف </small></p>
+<p style="direction: rtl;" ><small  > 4- حاول كتابة كلمة واحدة في حال لم تظهر نتائج للنص الذي تريده </small></p>
+<br>
+<p style="direction: rtl;" ><small  > في حال واجهتك مشكلة اخرى يرجى ارسال Feedback 😊 </small></p>
 {% endif %}
 {% endblock %}
