--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,8 @@ padding-bottom : 2px;
             <!--  <img src="{% static 'img/logo.png' %}" alt="Logo" height="40" class="rounded-circle border"> -->
         </a>
         <a class="text-decoration-none " href="{% url 'company_list' %}">
-            <h2 style="font-weight: bold;  font-family: 'Brush Script MT', cursive;" class="gradient-text pb-1">Knowledge Base</h2>
+            <h2 style="font-weight: bold;  font-family: 'Brush Script MT', cursive;" class="gradient-text pb-1">
+                Knowledge Base</h2>
         </a>
     </div>
     <div class="d-flex align-items-center">
@@ -188,6 +189,11 @@ padding-bottom : 2px;
             <i id="theme-icon" class="bi bi-moon"></i>
         </button>
         <div class="logout ml-3">
+            <a href="{% url 'profile' %}" class="btn btn-light">
+                <i class="bi bi-person-circle"></i>
+            </a>
+        </div>
+        <div class="logout ml-3">
             <a href="{% url 'logout' %}" class="btn btn-light">
                 <i class="fas fa-sign-out-alt"></i>
             </a>
@@ -195,7 +201,7 @@ padding-bottom : 2px;
     </div>
 </header>
 
-<div >
+<div id="content">
     {% block content %}
     {% endblock %}
 </div>
