Agents and improve code

--- a/templates/authBase.html
+++ b/templates/authBase.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'img/logo.png' %}">
-    <title>KB</title>
+    <title>qcteam</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -120,6 +120,7 @@
 <div class="bubble"></div>
 <div class="bubble"></div>
 <div class="bubble"></div>
+
 <div class="container">
     {% block content %}
     {% endblock %}
