--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'img/logo.png' %}">
-    <title>KB</title>
+    <title>qcteam</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -86,7 +86,8 @@
 
 
 header {
-    border-bottom: 1px solid #ADD8E6;
+    border-bottom: 1px solid;
+    border-image: linear-gradient(to right, #ff6b6b, #f06595, #5c7cfa, #339af0, #22b8cf) 1;
     text-decoration : none ;
     position: fixed;
     width: 100%;
@@ -137,7 +138,7 @@ header {
     right: 20px;
     background: linear-gradient(45deg, #ff6b6b, #f06595, #5c7cfa, #339af0, #22b8cf);
     border-radius: 50%;
-    padding: 8px;
+    padding: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -167,17 +168,18 @@ padding-bottom : 2px;
 }
 
 }
+
     </style>
 </head>
 <body>
 <header class="d-flex justify-content-between align-items-center p-3 mb-4">
     <div class="header-logo d-flex align-items-center">
         <a href="{% url 'company_list' %}">
-            <!--  <img src="{% static 'img/logo.png' %}" alt="Logo" height="40" class="rounded-circle border"> -->
+            <img src="{% static 'img/logo.png' %}" alt="Logo" height="30" >
         </a>
         <a class="text-decoration-none " href="{% url 'company_list' %}">
-            <h2 style="font-weight: bold;  font-family: 'Brush Script MT', cursive;" class="gradient-text pb-1">
-                Knowledge Base</h2>
+            <h4 style="font-weight: bold;  font-family: 'Brush Script MT', cursive;" class="gradient-text pb-1 pt-3">
+                Knowledge Base</h4>
         </a>
     </div>
     <div class="d-flex align-items-center">
